# tasklattice

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  lattice.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.github/workflows/: _tasklattice.yml  _test_projects.yml  ci.yml  cpp_mandel.yml  test.yml
src/tasklattice/: __init__.py  _paths.py  constants.py  core.py  errors.py  lattice.py  materialize.py  pretty.py  profile.py  render.py  runplan.py  source.py  staging.py  template.py  warnings_bridge.py
src/tasklattice/placeholder/: grammar.py  model.py  parse.py  quotes.py  resolve.py  source.py  validate.py
src/tasklattice/platform/: __init__.py  base.py  posix.py  windows.py
src/tasklattice/reporting/: console.py  diagnostics.py  warnings_bridge.py
src/tasklattice/run/: io.py  materialize.py  plan.py  staging.py  state.py
src/tasklattice/runners/: __init__.py  base.py  local.py
src/tasklattice/utils/: fs_utils.py  json_utils.py  misc_utils.py  time_utils.py
test_projects/cpp_mandel/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
test_projects/cpp_mandel/configs/: config.json  config.toml  config.xml  config.yaml
test_projects/cpp_mandel/include/mandel/: core.hpp
test_projects/cpp_mandel/src/: cli_main.cpp  core.cpp
test_projects/cpp_mandel/tests/: CMakeLists.txt  smoke.cmake
tests/: test_basic.py  test_source.py  test_template.py  utils.py
tests/placeholder/: test_grammar.py  test_model.py  test_parse.py  test_resolve.py
tests/unit/placeholder/: test_parse.py  test_resolve.py
