[project]
name = "tasklattice"
version = "0.1.0"
description = "Modular simulation sweep orchestrator"
readme = "README.md"
authors = [{ name = "Zachary Meadows", email = "zmeadows@gmail.com" }]
requires-python = ">=3.11,<3.13"

dependencies = [
  "lark>=1.2,<2",
  "rich>=14,<15",
  "msgspec>=0.19,<0.20",
]

[project.urls]
Homepage = "https://github.com/zmeadows/tasklattice"
Repository = "https://github.com/zmeadows/tasklattice"

[project.optional-dependencies]
# local development & CI
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "ruff>=0.4",
  "typing_extensions>=4.10",
  "pre-commit>=3.7",
  "basedpyright",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# --- Setuptools (src/ layout) ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "test"]
respect-gitignore = true

[tool.ruff.lint]
# Include import sorting (I), plus some common, fast rules
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.basedpyright]
typeCheckingMode = "standard"

include = ["src", "tests"]

exclude = [
  "**/.venv",
  "**/venv",
  "**/env",
  "**/__pycache__",
  "**/site-packages/**",
  "build",
  "dist",
  "**/.*",
]

ignore = ["**/.venv/**", "**/build/**"]

venvPath = "."
venv = ".venv"

executionEnvironments = [
  { root = ".", pythonVersion = "3.11" }
]

